--- a/lesson_1/pubspec.yaml
+++ b/lesson_1/pubspec.yaml
@@ -1,4 +1,4 @@
-name: codility_lesson_1
+name: lesson_1
 description: A sample command-line application.
 version: 1.0.0
 # repository: https://github.com/my_org/my_repo
